config/manager/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-controller-manager
spec:
  podSelector:
    matchLabels:
      control-plane: controller-manager
  policyTypes:
  - Egress
  egress:
    - to:
      - namespaceSelector: {}
        podSelector:
          matchLabels:
            apiserver: "true"
            app: openshift-kube-apiserver
      ports:
        - port: 6443
          protocol: TCP
    - to:
      - ipBlock:
          cidr: 172.20.0.1/32  # CIDR of Kubernetes API Endpoint.
      ports:
        - port: 6443
          protocol: TCP
        - port: 443
          protocol: TCP
    # Open traffic to SeaLights
    - to:
      - ipBlock:
          cidr: 159.60.128.87/32
      ports:
        - port: 443
          protocol: TCP
    # Allow DNS queries so SeaLights can resolve the api url
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: openshift-dns
      ports:
        - port: 5353
          protocol: UDP
    # Allow gRPC export to OTel collector for distributed tracing
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: konflux-otel
      ports:
        - port: 4317
          protocol: TCP
